Execution Env Enums and Auth Slack Alerts (#661)
* convert exec env to enums and add slack auth alerts in production only

* alert on failed jobs or first time a contract has a job run

* use logmanager instead of directly using slacklogger

* protect log manager from npes and address e2e test failure

* change docker-compose to set ab2d env by variable or default

* stop pretty printing logs to make Splunk filtering simpler